@@ -1,6 +1,6 @@
 CHANGELOG for smartmontools
 
-$Id: CHANGELOG,v 1.49 2002/11/16 18:30:23 ballen4705 Exp $
+$Id: CHANGELOG,v 1.50 2002/11/17 05:57:32 ballen4705 Exp $
 
 Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>
 
@@ -24,8 +24,12 @@ California, Santa Cruz. http://ssrc.soe.ucsc.edu/
 NOTES FOR FUTURE RELEASES: see TODO file.
 
 CURRENT RELEASE (see VERSION file in this directory):
+smartmontools-5.0.45
+
   Fixed bug in smartd where testunitready logic inverted
   prevented functioning on scsi devices.
+
+  Added testunitnotready to smartctl for symmetry with smartd.
 
   Brabec: added Czech descriptions to .spec file
   Brabec: corrected comment in smartd.conf example
